--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 }
 
 #myHeader {
-  background-color: crimson
+  background-color: crimson;
   color: mintcream;
   padding: 40px;
   text-align: center;
