--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
 #my-header {
-  background-color: rgb(255, 165, 0);
-  color: hsl(147, 50, 47);
+  background-color: rgb(255 165 0);
+  color: hsl(147 50 47);
   padding: 40px;
   text-align: center;
 }
 
-#myHeader {
+#my-header {
   background-color: crimson;
   color: mintcream;
   padding: 40px;
